Fixed the overlapping on the container

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 :root {
@@ -19,54 +20,53 @@
 }
 
 body {
-    background-color: var(--clr-very-light-gray);
+    font-size: var(--fs-default);
+    padding: 10px;
 }
 
 header {
-  text-align: center;
-  font-size: 26px;
-  background-color: aquamarine;
-  margin-bottom: 20px;
-  padding: 20px;
+    text-align: center;
+    font-size: 22px;
+    padding-bottom: 10px;
+}
+
+header a {
+    text-decoration: underline;
+
 }
 
 .container {
-  display: flex;
-  /* position: fixed;
-  top: 50%;
-  left: 50%;
-  width: 750px;
-  transform: translate(-50%, -50%); */
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-  height: 100vh;
-  margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--clr-very-light-gray);
+    min-height: 100vh;
 }
 
 .card {
-    padding: 48px;
-    flex-basis: 100%;
+    min-height: 25rem;
+    max-width: 17rem;
+    padding: 2.6rem;
+    position: relative;
 }
 
 img {
-    margin-bottom: 16px;
+    margin-bottom: 1.5rem;
 }
 
 h1 {
-    margin-bottom: 16px;
     color: var(--clr-very-light-gray);
     font-family: var(--ff-bsd);
-    font-weight: 700;
     font-size: var(--fs-heading);
+    font-weight: 700;
 }
 
 p {
-    margin-bottom: 52px;
-    line-height: 24px;
     color: var(--clr-transparent-white);
     font-family: var(--ff-lexend);
-    font-weight: 400;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    font-size: var(--fs-default);
 }
 
 .sedans {
@@ -95,46 +95,41 @@ p {
     color: var(--clr-darker-cyan);
 }
 
+
 .button {
-    font-family: var(--ff-lexend);
-    font-size: var(--fs-default);
+    position: absolute;
     background-color: var(--clr-very-light-gray);
-    padding: 10px 20px;
-    border-radius: 20px;
-    text-decoration: none;
+    border: 2px solid var(--clr-very-light-gray);
+    text-align: center;
+    padding: 12px 18px;
+    bottom: 0;
+    margin-bottom: 2rem;
+    border-radius: 30px;
+    font-family: var(--ff-lexend);
+    font-weight: 400;
 }
 
 .button:hover,
 .button:focus {
-    border: 2px solid var(--clr-very-light-gray);
     background: transparent;
     color: var(--clr-very-light-gray);
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 950px) {
     .container {
         flex-direction: column;
-        width: 500px;
+        padding: 5rem;
+    }
+
+    .card {
+        min-width: 22rem;
     }
 
     .sedans {
         border-radius: 8px 8px 0 0;
     }
     
-    .suvs {
-        border-radius: 0;
-    }
-    
     .luxury {
         border-radius: 0 0 8px 8px;
     }
 }
-
-@media (max-width: 600px) {
-    .container {
-        width: 330px;
-    }
-}
-
-
-
